Add missing i18n label

--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -562,7 +562,7 @@
         "config": {
             "data": {
                 "menu": "Menu",
-                "themes": "",
+                "themes": "Themes",
                 "loading": "Load",
                 "wmsimport": "Add external WMS",
                 "routingTools": "Routing",
