--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -293,6 +293,7 @@
                 "modifyObjectBtnTooltip": "Objekt modifzieren",
                 "deleteObjectBtnTooltip": "Objekt löschen",
                 "clearObjectsBtnTooltip": "Alle Objekte löschen",
+                "exportObjectsBtnTooltip": "Objekte exportieren",
                 "layerLegendName": "Bemaßungen"
             }
         }
