Offer ISO-8859-1 as csv encoding

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -168,6 +168,7 @@
                 "MsgNoValidFilenameText": "Bitte einen gültigen Dateinamen eingeben",
                 "outputFormatText": "Format",
                 "delimiterText": "Trennzeichen",
+                "encodingText": "Encoding",
                 "quoteText": "Anführungszeichen (\" \") verwenden",
                 "downloadAllChartDataMsgButtonYes": "Herunterladen",
                 "downloadAllChartDataMsgButtonNo": "Abbrechen"
