--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -168,6 +168,7 @@
                 "MsgNoValidFilenameText": "Bitte einen gültigen Dateinamen eingeben",
                 "outputFormatText": "Format",
                 "delimiterText": "Delimiter",
+                "encodingText": "Encoding",
                 "quoteText": "use double quotes (\" \")",
                 "downloadAllChartDataMsgButtonYes": "Download",
                 "downloadAllChartDataMsgButtonNo": "Cancel",
