Add encoding format option for shape files

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -772,6 +772,7 @@
                 "downloadButtonYes": "Ja",
                 "downloadButtonNo": "Nein",
                 "outputFormatText": "Ausgabeformat",
+                "encodingText": "Encoding",
                 "title": "Legende"
             }
         }
