Show filter dependency tooltip in filter window

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -2288,7 +2288,9 @@
                 "refreshInterval": "Aktualisierungsintervall",
                 "minute": "1 Minute",
                 "minutes": "{0} Minuten",
-                "numberfieldValidationText": "Wert muss ein Vielfaches von {0} sein!"
+                "numberfieldValidationText": "Wert muss ein Vielfaches von {0} sein!",
+                "dependencyText": "Abhängigkeiten: ",
+                "timeFilter": "Zeitfilter"
             }
         }
     },
