--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -1047,7 +1047,10 @@
                     "arrivalTime": "Ankunftszeit",
                     "settingsTitle": "Einstellungen",
                     "routingAlgorithmClassicTooltip": "Optimieren nach Strecke",
-                    "routingAlgorithmForceAllTooltip": "Optimieren nach Zeit"
+                    "routingAlgorithmForceAllTooltip": "Optimieren nach Zeit",
+                    "vroomChartXLabel": "Ausführungsdauer [h]",
+                    "vroomChartYLabel": "Kosten",
+                    "vroomChartPanelTitle": "Planungshorizonte"
                 }
             }
         }
