show planning costs as hours

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -1049,8 +1049,8 @@
                     "routingAlgorithmClassicTooltip": "Optimieren nach Strecke",
                     "routingAlgorithmForceAllTooltip": "Optimieren nach Zeit",
                     "vroomChartXLabel": "Ausführungsdauer [h]",
-                    "vroomChartYLabel": "Kosten",
-                    "vroomChartPanelTitle": "Planungshorizonte"
+                    "vroomChartYLabel": "Fahrzeit insgesamt [h]",
+                    "vroomChartPanelTitle": "Alternativen"
                 }
             }
         }
